crates/parser/src/snapshots/squawk_parser__parse__tests__create_subscription_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: CreateSubscriptionStmt(
                Object({
                    "conninfo": String(
                        "host=192.168.1.50 port=5432 user=foo dbname=foodb",
                    ),
                    "publication": Array([
                        Object({
                            "String": Object({
                                "sval": String(
                                    "mypublication",
                                ),
                            }),
                        }),
                        Object({
                            "String": Object({
                                "sval": String(
                                    "insert_only",
                                ),
                            }),
                        }),
                    ]),
                    "subname": String(
                        "mysub",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                145,
            ),
        },
    ],
)
