crates/parser/src/snapshots/squawk_parser__parse__tests__parse_detach_table_partition.snap
---
source: parser/src/parse.rs
expression: res

---
Ok(
    [
        RawStmt {
            stmt: AlterTableStmt(
                AlterTableStmt {
                    cmds: [
                        AlterTableCmd(
                            AlterTableCmd {
                                subtype: DetachPartition,
                                name: None,
                                def: Some(
                                    PartitionCmd(
                                        Object({
                                            "name": Object({
                                                "inh": Bool(
                                                    true,
                                                ),
                                                "location": Number(
                                                    46,
                                                ),
                                                "relname": String(
                                                    "measurement_y2006m02",
                                                ),
                                                "relpersistence": String(
                                                    "p",
                                                ),
                                            }),
                                        }),
                                    ),
                                ),
                                behavior: Restrict,
                                missing_ok: false,
                            },
                        ),
                    ],
                    relation: RangeVar {
                        catalogname: None,
                        schemaname: None,
                        relname: "measurement",
                        inh: true,
                        relpersistence: "p",
                        alias: None,
                        location: 13,
                    },
                    objtype: Table,
                    missing_ok: false,
                },
            ),
            stmt_location: 0,
            stmt_len: Some(
                66,
            ),
        },
    ],
)
