crates/parser/src/snapshots/squawk_parser__parse__tests__parsing_grant_role.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: GrantRoleStmt(
                Object({
                    "behavior": String(
                        "DROP_RESTRICT",
                    ),
                    "granted_roles": Array([
                        Object({
                            "AccessPriv": Object({
                                "priv_name": String(
                                    "admins",
                                ),
                            }),
                        }),
                    ]),
                    "grantee_roles": Array([
                        Object({
                            "RoleSpec": Object({
                                "location": Number(
                                    16,
                                ),
                                "rolename": String(
                                    "joe",
                                ),
                                "roletype": String(
                                    "ROLESPEC_CSTRING",
                                ),
                            }),
                        }),
                    ]),
                    "is_grant": Bool(
                        true,
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                19,
            ),
        },
    ],
)
