crates/parser/src/snapshots/squawk_parser__parse__tests__regression_update_table.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: AlterTableStmt(
                AlterTableStmt {
                    cmds: [
                        AlterTableCmd(
                            AlterTableCmd {
                                subtype: ColumnDefault,
                                name: Some(
                                    "column_name",
                                ),
                                def: Some(
                                    Constant(
                                        Object({
                                            "boolval": Object({}),
                                            "location": Number(
                                                73,
                                            ),
                                        }),
                                    ),
                                ),
                                behavior: Restrict,
                                missing_ok: false,
                            },
                        ),
                    ],
                    relation: RangeVar {
                        catalogname: None,
                        schemaname: None,
                        relname: "table_name",
                        inh: true,
                        relpersistence: "p",
                        alias: None,
                        location: 21,
                    },
                    objtype: Table,
                    missing_ok: false,
                },
            ),
            stmt_location: 0,
            stmt_len: Some(
                78,
            ),
        },
    ],
)
